# checkers

./: CMakeLists.txt  README.md  main.cpp
Doctest/: CMakeLists.txt  doctest.cpp
Documentation/html/: _asteroid_8h_source.html  _board_8h_source.html  _checker_8h_source.html  _checkers_8h_source.html  _dot_8h_source.html  _window_8h_source.html  annotated.html  class_asteroid-members.html  class_asteroid.html  class_board-members.html  class_board.html  class_checker-members.html  class_checker.html  class_checkers-members.html  class_checkers.html  class_dot-members.html  class_dot.html  class_window-members.html  class_window.html  classdoctest_1_1_approx-members.html  classdoctest_1_1_approx.html  classdoctest_1_1_context-members.html  classdoctest_1_1_context.html  classdoctest_1_1_string-members.html  classdoctest_1_1_string.html  classdoctest_1_1detail_1_1_context_scope-members.html  classdoctest_1_1detail_1_1_context_scope.html  classdoctest_1_1detail_1_1_context_scope_base-members.html  classdoctest_1_1detail_1_1_context_scope_base.html  classdoctest_1_1detail_1_1_exception_translator-members.html  classdoctest_1_1detail_1_1_exception_translator.html  classes.html  classstd_1_1basic__istream.html  classstd_1_1basic__ostream.html  classstd_1_1tuple.html  dir_12e2b67a6b8d2f7dd7478d7506afb3de.html  dir_37618a71d99bdfed5979e976980d5eec.html  dir_5dafd4660615c7e05a84a5ee9d9fd12b.html  dir_71de40031bfb51e6fe43c1916bf0d230.html  dir_720d36405d39524b939e0100a25cf975.html  (+112 more)
Documentation/latex/: files.tex  (+76 more)
Objects/: Board.cpp  Board.h  Checker.cpp  Checker.h  Checkers.cpp  Checkers.h  Dot.cpp  Dot.h  Window.cpp  Window.h
Test/: CMakeLists.txt  test.cpp
(+22 files in other folders)
